--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
 server.port=8304
 server.context-path=/kafkaTest
+
 logging.file=/Users/cmcc/logs/kafkaTest.log
+
 spring.http.multipart.max-file-size=50MB
 spring.http.multipart.max-request-size=50MB
-spring.redis.host=172.0.0.1
+
+# REDIS
+spring.redis.database=0
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.pool.maxActive=1000
-spring.redis.pool.maxWait=1000
-spring.redis.pool.maxIdle=300
-spring.redis.pool.minIdle=0
-spring.redis.timeout=100
+spring.redis.password=
+spring.redis.pool.max-active=5
+spring.redis.pool.max-idle=5
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-wait=100
+spring.redis.timeout=3000
