--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,22 @@ spring.redis.pool.max-idle=5
 spring.redis.pool.min-idle=0
 spring.redis.pool.max-wait=100
 spring.redis.timeout=3000
+
+#DB
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/poetry?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=happytimmy
+spring.datasource.poolName=SpringBootEaspDBPool
+spring.datasource.maximumPoolSize=10
+spring.datasource.minimumIdle=10
+spring.datasource.cachePrepStmts=true
+spring.datasource.prepStmtCacheSize=250
+spring.datasource.prepStmtCacheSqlLimit=2048
+spring.datasource.useServerPrepStmts=true
+spring.datasource.connectionTimeout=5000
+spring.datasource.validationTimeout=1000
+
+
+
+
